fixes to code view, z-index added line numbers, copy to clip board

--- a/src/main.scss
+++ b/src/main.scss
@@ -31,21 +31,11 @@ html, body {
   background: var(--theme-background);
   font-family: Niramit;
 }
-/*
-html:not([data-scroll='0']) {
-  body {
-    padding-top: 3em;
-  }
-  header {
-    position: fixed;
-  }
-  //@include scrollbars(0.5em, $mdc-theme-primary);
-  .graph-container {
-    margin-top: 0px;
-  }
-}
 
-*/
+
+header {
+  height:62px;
+}
 
 section {
   .drawer-container {
@@ -119,7 +109,7 @@ svelte-virtual-list-viewport {
   position: absolute;
   right: 0px;
   width: 6px;
-  z-index: 234;
+  z-index: 4;
   height: 100%;
   cursor: w-resize;
   &.__debug {
@@ -137,20 +127,10 @@ svelte-virtual-list-viewport {
   min-width:254px;
   //max-width:100%;
   //width:100%;
-  z-index:232;
+  z-index:3;
   position:fixed;
   left:0px;
   pointer-events:auto ;  border-radius: 4px; background:#892787;
-}
-
-#code-view {
-  position:fixed;
-  top:96px;
-  left:0px;
-  width:100%;
-  height:100%;
-  z-index:2323;
-  background:rgba(255,255,255,0.95);
 }
 
 #third-bar{
@@ -162,3 +142,20 @@ svelte-virtual-list-viewport {
   @include mdc-linear-progress-bar-color($material-color-green-500);
   @include mdc-linear-progress-buffer-color($material-color-green-100);
 }
+
+/** UNUSED **/
+/*
+html:not([data-scroll='0']) {
+  body {
+    padding-top: 3em;
+  }
+  header {
+    position: fixed;
+  }
+  //@include scrollbars(0.5em, $mdc-theme-primary);
+  .graph-container {
+    margin-top: 0px;
+  }
+}
+
+*/
