--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -28,9 +28,6 @@
 
 /* */
 
-header {
-  height:62px;
-}
 
 
 .swatch-color {
